--- a/doqmeat/music/concerts/index.html
+++ b/doqmeat/music/concerts/index.html
@@ -79,7 +79,7 @@
   <video width="100%" controls>
    <source src="https://files.catbox.moe/e5fjui.mp4" type="video/mp4">
   </video>
-  <p><b>edit:</b> firefox users idk why the video above doesn't want to play on the player above.... <a href="https://files.catbox.moe/e5fjui.mp4" target="_blank">hyperlink</a> to it instead.</p>
+  <p><b>edit:</b> firefox users idk why the video above doesn't want to play on the player... <a href="https://files.catbox.moe/e5fjui.mp4" target="_blank">hyperlink</a> to it instead.</p>
   <hr>
   <h3 id="oneus-1">07.feb.23 - oneus</h3>
   <h4>favorite performances</h4>
