--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -43,13 +43,13 @@
    <a href="cds.html">CD collection</a>
 
    <h4>mini-pages</h4>
-   <a href="info.html" target="iframe_a">info</a>
-   <a href="featured.html" target="iframe_a">featured music</a>
-   <a href="playlists.html" target="iframe_a">playlists</a>
-   <a href="listening-log/index.html" target="iframe_a">listening logs</a>
-   <a href="concerts/index.html" target="iframe_a">concerts</a>
-   <a href="kpop-producers.html" target="iframe_a">fav kpop producers</a>
-   <a href="recaps/index.html" target="iframe_a">yearly recaps</a>
+   <a href="info.html" target="mainframe">info</a>
+   <a href="featured.html" target="mainframe">featured music</a>
+   <a href="playlists.html" target="mainframe">playlists</a>
+   <a href="listening-log/index.html" target="mainframe">listening logs</a>
+   <a href="concerts/index.html" target="mainframe">concerts</a>
+   <a href="kpop-producers.html" target="mainframe">fav kpop producers</a>
+   <a href="recaps/index.html" target="mainframe">yearly recaps</a>
 
    <h4>other</h4>
    <a title="blog post" href="/blog/2023/230912-vocaloid.html" target="_blank">my history with vocaloid</a>
@@ -61,14 +61,15 @@
   </nav>
 
   <main id="frame" class="box">
-   <iframe id="mainframe" src="info.html" height="100%" width="100%" name="iframe_a"></iframe>
+   <iframe id="mainframe" src="info.html" height="100%" width="100%" name="mainframe"></iframe>
   </main>
 
   <div id="mv" class="box"><noscript>this box is for music video "ads" but do not fear! it's just screenshots of my favorite music videos :)</noscript></div>
 
   <div id="updates" class="box">
    <h3>updates</h3>
-   <p><b>01.nov.24</b> - revived my <a href="playlists.html" target="iframe_a">playlists</a> mini page</p>
+   <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
+   <p><b>01.nov.24</b> - revived my <a href="playlists.html" target="mainframe">playlists</a> mini page</p>
    <p><b>22.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#4">crystal castles</a> + <a href="listening-log/2024/fall.html#5">MG ultra</a></p>
    <p><b>19.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#3">imaginal disk</a> + new featured song and album</p>
    <p><b>05.oct.24</b> - debuting fall's listening log with tripleS' <a href="listening-log/2024/fall.html#2">assemble24</a></p>
@@ -97,7 +98,7 @@
    </div>
    <hr>
 
-   <center><small>past featured music can be found <a title="will open on the iframe above!" href="featured.html#" target="iframe_a">here</a></small></center>
+   <center><small>past featured music can be found <a title="will open on the iframe above!" href="featured.html#" target="mainframe">here</a></small></center>
   </div>
 
   <div id="poll" class="box">
