--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -124,12 +124,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> webfishing <small>(feel free to <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">message me</a> to add me on steam and play together!)</small></p>
+			<p><span class="hl">playing:</span> kirby planet robobot</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> dandadan + arcane S2</p>
+			<p><span class="hl">watching:</span> dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> finishing this uni semester stress free</p>
-			<p class="date">last updated on 22.nov.24</p>
+			<p class="date">last updated on 27.nov.24</p>
 
 		</div>
 
