added a ton of sites to my button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -18,9 +18,9 @@
 
 <body>
 
-	<div id="title">
+	<h1 id="title">
 		<img src="/fonts/img/bear/tb1-hidari.gif"><img src="/fonts/img/bear/tb1-star.gif"><img src="/fonts/img/bear/tb1-b.gif"><img src="/fonts/img/bear/tb1-u2.gif"><img src="/fonts/img/bear/tb1-t2.gif"><img src="/fonts/img/bear/tb1-t2.gif"><img src="/fonts/img/bear/tb1-o2.gif"><img src="/fonts/img/bear/tb1-n2.gif"><img src="/fonts/img/bear/tb1-sp.gif"><img src="/fonts/img/bear/tb1-w.gif"><img src="/fonts/img/bear/tb1-a2.gif"><img src="/fonts/img/bear/tb1-l2.gif"><img src="/fonts/img/bear/tb1-l2.gif"><img src="/fonts/img/bear/tb1-star.gif"><img src="/fonts/img/bear/tb1-migi.gif">
-	</div>
+	</h1>
 
 	<div class="box">
 
@@ -28,7 +28,7 @@
 		<p>here's my button and code if you'd like to link back to me ☆⌒(*＾-゜)v and remember to save them to your own site!</p>
 		<img title="made in 20.apr.23" src="/!g/web/doqmeat.png" alt="doqmeat button">
 		<img title="made in 22.jun.24" src="/!g/web/doqmeat-2.png" alt="doqmeat button">
-		<h3><img src="/!g/pix/icon_k_love1.gif"> internet neighbors</h3>
+		<h2><img src="/!g/pix/icon_k_love1.gif"> internet neighbors</h2>
 
 		<div class="neo">
 			<a title="chara - the very first neocities site i came across and my main inspiration for creating my own!!! absolutely lovely site and webmaster as well" href="https://hunipyon.neocities.org" target="_blank"><img src="!g/hunipyon.gif"></a>
@@ -106,7 +106,7 @@
 			<a title="kyu - their art radiates such a warm feeling on me.... idk but i really love it here" href="https://kyu.neocities.org" target="_blank"><img src="!g/kyu.gif"></a>
 			<a title="alexandra - AWESOME site with so many links and things to read!" href="https://xandra.cc/" target="_blank"><img src="!g/xandra.png"></a>
 			<a title="leviathren - very cool site. im a big enjoyer of the different themes" href="https://leviathren.neocities.org/" target="_blank"><img src="!g/leviathren.gif"></a>
-			<a title="aubr" href="https://410.neocities.org"><img src="!g/aubr.png"></a>
+			<a title="aubr" href="https://410.neocities.org"><img src="https://410.neocities.org/button.png" alt="410"></a>
 			<a title="dreambubble - cool site filled with pixels and interesting pages!" href="https://dreambubble.neocities.org/" target="_blank"><img src="!g/dreambubble.gif"></a>
 			<a title="lostlove - cozy site with a nice journal" href="https://lostlove.neocities.org/" target="_blank"><img src="!g/lostlove.gif"></a>
 			<a title="mapplebear - a super sweet and cozy site, i especially love their logs about fashion!" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
@@ -187,6 +187,8 @@
 			<a href="https://taami.neocities.org/" target="_blank"><img src="!g/taami.gif" alt="taami"></a>
 			<a href="https://visualculture.vc/" target="_blank"><img src="!g/visualculture.png" alt="visualculture"></a>
 			<a href="https://iwishyouroses.neocities.org/" target="_blank"><img src="!g/iwishyouroses.png" alt="i wish you roses"></a>
+			<a href="https://8bitgalaxyhunts.neocities.org/" target="_blank"><img src="!g/8bitgalaxy.gif" alt="8bitgalaxy"></a>
+			<a href="https://bloodbathspite.neocities.org/blog/" target="_blank"><img src="!g/bloodbathspite.gif" alt="bloodbathspite"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
@@ -202,7 +204,7 @@
 			<a href="https://vianamana.neocities.org/" target="_blank">vianamana</a>
 		</p>
 
-		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
+		<h3><img src="/!g/pix/icon_k_clover1.gif"> others</h3>
 		<h4>personal sites</h4>
 		<div id="other" class="neo">
 			<a title="charming little personal site! mostly journals from the webmaster. feel very intimate" href="https://turd.neocities.org/" target="_blank"><img src="!g/turd.png"></a>
@@ -283,8 +285,12 @@
 			<a href="https://blog.radicaldream.land" target="_blank"><img src="https://i.postimg.cc/QxhG798p/dispatchblog-banner.gif"></a>
 			<a href="https://littlecloud.neocities.org/" target="_blank"><img src="!g/littlecloud.png" alt="littlecloud"></a>
 			<a href="https://maphren.neocities.org/" target="_blank"><img src="https://maphren.neocities.org/imgs/buttons/maphren.gif" alt="maphren"></a>
-			<a href="https://strayos.nekoweb.org/" target="_blank"><img src="https://file.garden/ZwWMmrKYN3y0oqit/graphics/sOS-btn.gif" alt="a teal sitebutton with a slanted left-side. it contains a stylized computer component inside of it, the circuit-board-like symbols of the component breaching the outer-line of the slanted side. there is purple text on it which says strayOS said text is blinking the signal S.O.S. in morse code."></a>
+			<a href="https://strayos.nekoweb.org/" target="_blank"><img src="https://file.garden/ZwWMmrKYN3y0oqit/graphics/sOS-btn.gif" alt="strayOS"></a>
 			<a href="https://hiratelier.haliya.net/" target="_blank"><img src="!g/hiratelier.png" alt="hiratelier"></a>
+			<a href="https://mushmallow.neocities.org/" target="_blank"><img src="!g/mushmallow.png" alt="mushmallow"></a>
+			<a href="https://poble.cl/" target="_blank"><img src="!g/poble.gif" alt="poble"></a>
+			<a href="https://unicodeangel.neocities.org/" target="_blank"><img src="!g/unicodeangel.gif" alt="unicodeangel"></a>
+			<a href="https://milk-tea.neocities.org" target="_blank"><img src="!g/milk-tea.gif" alt="milk-tea"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -341,6 +347,7 @@
 			<a title="super cute pixels" href="http://whimsical.heartette.net" target="_blank"><img src="!g/whimsical.gif"></a>
 			<a title="site codes and templates" href="https://templaterr.neocities.org" target="_blank"><img src="!g/templaterr1.png"></a>
 			<a title="nuko emoticons!" href="https://nukocities.neocities.org/" target="_blank"><img src="https://nukocities.neocities.org/img/nukocities.gif"></a>
+			<a href="https://nukochannel.neocities.org/" title="these little cat emojis and stickers" target="_blank"><img src="!g/nukochannel.gif" alt="nukochannel"></a>
 			<a title="tumblr blog with pixels, cute bgs, etc" href="http://engrampixel.tumblr.com" target="_blank"><img src="http://media.tumblr.com/tumblr_m5106aHKT11qid2nw.gif"></a>
 			<a title="pixels and toybox" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="!g/sleepysprout.png"></a>
 			<a title="pixel adoptables, bgs, div boxes" href="https://www.lejlart.com/apple.html" target="_blank"><img src="!g/appledust.gif"></a>
@@ -368,7 +375,10 @@
 		<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif" width="90px"></a>
 		<a title="lots of cute old graphics" href="https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank"><img src="!g/ritvasgallery.gif" alt="ritva's gallery"></a>
 
-		<h4 id="fun">for fun!</h4>
+		<h4 id="fansite">fansites</h4>
+		<a title="fansite for kpop group billlie" href="https://billlielove.neocities.org/" target="_blank"><img src="!g/billlielove.webp" alt="billlielove"></a>
+
+		<h4 id="fun">for fun / misc</h4>
 		<div class="neo">
 			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
 			<a href="https://momg.neocities.org" target="_blank"><img src="!g/momg.gif"></a>
