--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -52,7 +52,7 @@
 		<p>img heavy! might have to reload the page so all imgs to load</p>
 
 		<p>i have all of these here so its easier for me to look them up to use on my pages! <br> feel free to take any of these for your own site as well but please 1) visit the creator's page and read their rules (if there's credit linked) 2) and do not <u>hotlink</u>! <mark>save to your own server/site</mark></p>
-		<p>credit for these will be linked on the img if i know of it. i'm currently in the process of reverse img searching sources. <b>if you know the source of an img, or are the original creator of any of these and want it deleted/remove: please</b> <a href="tomail:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">let me know!</a></p>
+		<p>credit for these will be linked on the img if i know of it. i'm currently in the process of reverse img searching sources. <b>if you know the source of an img, or are the original creator of any of these and want it deleted: please</b> <a href="tomail:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">let me know!</a></p>
 
 		<h2 id="emo">emoticons</h2>
 		<h3 id="cat-emo">cats</h3>
@@ -587,6 +587,7 @@
 		<img src="/!g/deco/kitty-basket.gif">
 		<img src="/!g/deco/silly-cat.gif">
 		<img src="/!g/deco/sleeping_blk_cat.gif">
+		<a title="nukochannel" href="https://nukochannel.neocities.org" target="_blank"><img src="/!g/deco/nukosleepycat.gif" alt="nuko sleeping with a cat"></a>
 
 
 		<br>
@@ -884,7 +885,6 @@
 
 		<br> <!-- if found -->
 		<img title="made by me!" src="/!g/gif/kasio2.gif">
-		<img title="made by me!" src="/!g/gif/kasio1.gif">
 		<img title="made by me!" src="/!g/gif/kasio.gif">
 
 		<h2 id="frames">frames</h2>
