--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,10 @@
 			</article> -->
 
 			<article>
+				<p><b>28.nov.24 - 2am</b> one day i will learn about how to add pagination to things. but that day is not today. if i ever learn it though, i will be implementing it to this very page.</p>
+			</article>
+
+			<article>
 				<p><b>24.nov.24 - 12am</b> i'm so excited for <b>billlie</b>'s concert!!!! i'm gonna be bringing my 3DS so i won't be bored while waiting for the doors to open + i wanna record a bit of the concert with it. <img src="/!g/pix/catdance1.gif" alt=""></p>
 			</article>
 
