--- a/doqmeat/collection/plushies/index.html
+++ b/doqmeat/collection/plushies/index.html
@@ -129,6 +129,18 @@
 
 		<!--		COLUMN 2 -->
 		<div class="column">
+			<div class="plush two">
+				<div class="images">
+					<img src="!g/steve.png" alt="plushie of steve">
+				</div>
+				<div class="desc">
+					<h2>steve minecraft</h2>
+					<p>found while cleaning the toy area of my work place.</p>
+					<p>had to take him home. hope you can understand.</p>
+					<p>he's kinda huge.</p>
+				</div>
+			</div>
+
 			<div class="plush one">
 				<div class="images">
 					<img src="!g/nyan-cat.png">
@@ -235,7 +247,7 @@
 
 	</main>
 	<footer>
-		<p><b>last updated on 16.sep.24</b></p>
+		<p><b>last updated on 28.nov.24</b></p>
 		<p><img src="favicon.gif"> <a href="/">home</a> / <a href="/collection/index.html">collections</a> / <a href="/sitemap.html">sitemap</a> <img src="favicon.gif"></p>
 		<p><b>credit:</b> body bg pic by <a href="https://unsplash.com/@myshegotripped?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mandy Dolan</a> on <a href="https://unsplash.com/photos/a-pile-of-stuffed-animals-sitting-next-to-each-other-01gHSXwbCUQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="/notebook/links/fonts.html">fonts</a> used: momo, gaegu
 		</p>
