log for styling star

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -208,7 +208,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv sim finished fav">
 			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.png" tabindex="0"></a>
 		</div>
-		<div class="filterDiv sim current notdone">
+		<div class="filterDiv sim currently notdone">
 			<a title="style savvy: styling star" href="style-savvy-styling-star/index.html" target="iframe_a"><img src="style-savvy-styling-star/cover.png" alt="style savvy styling star" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished puzzle">
