minor fix to microblog code

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -32,10 +32,10 @@
 
 		<div id="blog">
 			<article>
-				<p><b>04.dec.24 - 2am</b> i've been feeling so drained lately. i wonder if it's the mental illness<sup>tm</sub>. talking with new people and just overall interacting with others has felt more exhausting than ever before as of late. i wish i could interact with people as easily as others can. i've been feeling so strange lately. i really wonder why its so difficult for me to do such a simple thing.</p>
+				<p><b>04.dec.24 - 2am</b> i've been feeling so drained lately. i wonder if it's the mental illness<sup>tm</sup>. talking with new people and just overall interacting with others has felt more exhausting than ever before as of late. i wish i could interact with people as easily as others can. i've been feeling so strange lately. i really wonder why its so difficult for me to do such a simple thing.</p>
 			</article>
 
-			<article> 
+			<article>
 				<p><b>28.nov.24 - 2am</b> one day i will learn about how to add pagination to things. but that day is not today. if i ever learn it though, i will be implementing it to this very page.</p>
 			</article>
 
