--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -168,6 +168,7 @@
 			<img src="!g/dreamy.gif">
 			<img src="!g/imbeingputdown.gif">
 			<img src="!g/luvmyputer.gif">
+			<img src="!g/littleguys.gif" alt="little guys">
 			<img src="!g/i-love-comments.gif" alt="i love comments">
 			<img src="!g/crying%20and%20throwing%20up.gif">
 			<img src="!g/waterbottle.gif">
