added youtube embed to concert page + some more screenshots of style savvy games

--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -135,9 +135,15 @@
 		<h3>screenshots</h3>
 		<center>
 			<h4>my character</h4>
+			<figure>
+				<img src="nuances.bmp" style="max-width: 90%" alt="cover of nuances magazine!">
+				<figcaption>nuances babyyyy!</figcaption>
+			</figure>
 			<img src="240612%20(2).jpg" style="max-width: 90%" />
-			<p>sorry all of my pics are in this pose FLSKFD</p>
-			<img src="240617%20(3).JPG" style="max-width: 90%" />
+			<figure>
+				<img src="240617%20(3).JPG" style="max-width: 90%" />
+				<figcaption>sorry all of my pics are in this pose FLSKFD</figcaption>
+			</figure>
 			<img src="240612%20(1).jpg" style="max-width: 90%" />
 			<img src="240603%20(4).jpg" style="max-width: 90%" />
 			<p><small>look how cute i look!</small></p>
