--- a/doqmeat/music/concerts/index.html
+++ b/doqmeat/music/concerts/index.html
@@ -15,37 +15,6 @@
  <script src="/!f/tooltip.js"></script>
  <!--  end of tooltip shit -->
 </head>
-<style>
- .date {
-  font-size: 15px;
- }
-
- .t-left {
-  padding-right: 10px;
-  width: 300px;
-  text-align: left;
-  vertical-align: top;
- }
-
- .t-right {
-  width: 300px;
-  text-align: left;
-  vertical-align: top;
- }
-
- .centered {
-  text-align: center;
- }
-
- iframe {
-  width: 100%;
-  height: 152px;
- }
-
- table {
-  width: 100%;
- }
-</style>
 
 <body>
  <div id="frame">
@@ -74,12 +43,12 @@
    <video width="60%" controls>
     <source src="https://files.catbox.moe/3w0frv.mp4" type="video/mp4">
    </video>
-   <figcaption><i>GingaMingaYo</i> recorded with my 3DS</figcaption>
+   <figcaption><i>GingaMingaYo</i> recorded with my 3DS. <a title="youtube" href="https://youtu.be/cYFgxbl2Ivk" target="_blank">full clip</a></figcaption>
   </figure>
-  <video width="100%" controls>
-   <source src="https://files.catbox.moe/e5fjui.mp4" type="video/mp4">
-  </video>
-  <p><b>edit:</b> firefox users idk why the video above doesn't want to play on the player... <a href="https://files.catbox.moe/e5fjui.mp4" target="_blank">hyperlink</a> to it instead.</p>
+  <center>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/J_eh5vN3esU?si=UquSQY7FcfWTeSet" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/3vXBRlm80iU?si=5ssewrOlTVQlXf8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </center>
   <hr>
   <h3 id="oneus-1">07.feb.23 - oneus</h3>
   <h4>favorite performances</h4>
