--- a/doqmeat/vgs/style-savvy-styling-star/index.html
+++ b/doqmeat/vgs/style-savvy-styling-star/index.html
@@ -60,6 +60,14 @@
 		<hr>
 		<p><span class="date">03.sep.24</span> started playing this right when i finished playing <a href="../style-savvy-trendsetters/index.html">trendsetters</a>. i asked on my private twitter if i should play <i>styling star</i> or <i>fashion forward</i> next and my only oomf who has played the style savvy games voted for <i>styling star</i> so!!! here i am.</p>
 		<p>first thing i noticed about the game is that there is no 3D option <small>unless my game is bugged but? i don't think that's it.</small> and taking a look at the release date being in 2017 then yeah that makes a LOT of sense, since i know nintendo was barely pushing the 3D gimmick of the 3DS at that time. i don't think i've made it pass the tutorial of the game, but once i have a few more minutes with the game i'll come back to this to write some more of my thoughts.</p>
+		<h3>screenshots</h3>
+		<center>
+			<figure>
+				<img src="241211.bmp" style="max-width:100%" alt="screenshot of a rock outfit. red and black.">
+				<figcaption>i really LOVED this outfit.</figcaption>
+			</figure>
+			<img src="241211.JPG" style="max-width:100%" alt="screenshot of my boutique assistant.">
+		</center>
 	</main>
 	<footer>
 		<a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a>
