added kirby plush

--- a/doqmeat/collection/plushies/index.html
+++ b/doqmeat/collection/plushies/index.html
@@ -25,6 +25,17 @@
 		<!--	COLUMN 1-->
 		<div class="column">
 
+			<div class="plush two">
+				<div class="images">
+					<img src="!g/kirby-1.png" alt="plushie of a sleepy kirby">
+					<img src="!g/kirby-2.png" alt="plushie of a sleepy kirby">
+				</div>
+				<div class="desc">
+					<h2>sleep kirby</h2>
+					<p>gift from my girlfriend for our 3rd anniversary <img src="/!g/pix/hearts-f.gif" alt=""> i started screaming when i saw kirby's little sleeping cap. soooooo cute. she got it for me because i've been playing a lot of <i>kirby planet robobot</i> as of late!</p>
+				</div>
+			</div>
+
 			<div class="plush one">
 				<div class="images">
 					<img src="!g/seth.png" alt="seth plushie front">
@@ -129,6 +140,7 @@
 
 		<!--		COLUMN 2 -->
 		<div class="column">
+
 			<div class="plush two">
 				<div class="images">
 					<img src="!g/steve.png" alt="plushie of steve">
