i swear this will be the final style for this page. i swear

--- a/doqmeat/vgs/fashion-dreamer/index.html
+++ b/doqmeat/vgs/fashion-dreamer/index.html
@@ -10,19 +10,7 @@
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 
 	<style>
@@ -38,14 +26,13 @@
 		.gallery img {
 			vertical-align: middle;
 		}
-
 	</style>
 </head>
 
 <body>
 	<div id="iframepc">
 		<h1>fashion dreamer</h1>
-		<img src="cover.png" class="cover">
+		<img src="cover.png" class="cover" width="50%">
 		<div class="info"><b>release date: </b> nov 3, 2023</div>
 		<div class="info"><b>developer: </b> Syn Sophia</div>
 		<div class="info"><b>genre/type: </b> simulation, fashion</div>
@@ -70,7 +57,7 @@
 		<img src="ry8.jpg" width="100%">
 
 		<h3 id="pandora">pandora</h3>
-		<p>NOT AN OC.... this is <a title="fandom.com (SORRY)" href="https://guitarhero.fandom.com/wiki/Pandora" target="_blank">guitar hero's pandora</a> but i basically treat her like my OC <small>(activision should just give her to me tbh)</small> pandora has always been one of my favorite characters because of her <a title="warriors of rock" href="https://static.wikia.nocookie.net/guitarhero/images/c/c4/Gh6_pandora_concept_art.jpg/revision/latest?cb=20161224200359" target="_blank">AWESOME</a> and <a title="guitar hero 1" href="https://static.wikia.nocookie.net/guitarhero/images/9/9a/Gameplay_03.jpg/revision/latest?cb=20090507185914">cool</a> <a title="guitar hero 5" href="https://i.pinimg.com/736x/5c/1e/72/5c1e725089c6b6934418db096ebcbdbb.jpg" target="_blank">outfit</a> <a title="rock the 80's" href="https://i.pinimg.com/564x/3a/75/7d/3a757d2f862a6039eb4aa28236961a39.jpg" target="_blank">designs</a> <small>(and also because i grew up playing guitar hero and i am pretty sure she was part of my gay awakening)</small></p>
+		<p>NOT AN OC.... this is <a title="fandom.com (SORRY)" href="https://guitarhero.fandom.com/wiki/Pandora" target="_blank">guitar hero's pandora</a> but i basically treat her like my OC <small>(activision should just give her to me tbh)</small> pandora has always been one of my favorite characters because of her <a title="warriors of rock" href="/shrines/pandora/pics/warriors of rock.jpg" target="_blank">AWESOME</a> and <a title="guitar hero 1" href="/shrines/pandora/pics/gh1.jpg">cool</a> <a title="guitar hero 5" href="/shrines/pandora/pics/gh5.jpg" target="_blank">outfit</a> <a title="rock the 80's" href="/shrines/pandora/pics/rock-the-80s.jpg" target="_blank">designs</a> <small>(and also because i grew up playing guitar hero and i am pretty sure she was part of my gay awakening)</small></p>
 		<p>i really love playing with her style and the lookits other players have made for her are soooo her as well! meow meow :3</p>
 		<img src="pandora6.jpg" width="49%">
 		<img src="pandora7.jpg" width="49%">
