--- a/doqmeat/vgs/unpacking/index.html
+++ b/doqmeat/vgs/unpacking/index.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8"> 
-<title>unpacking</title>
-<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
-<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
-<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-<!-- tooltip shit -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-<script>
-							(function($){
-							$(document).ready(function(){
-							$("[title]").style_my_tooltips({
-							tip_follows_cursor: true,
-							tip_delay_time:10,
-							tip_fade_speed:10,
-							attribute:"title"
-							});
-							});
-							})(jQuery);
-</script>
-<!--  end of tooltip shit -->
-  </head>
-  <body>
 
-<div id="iframepc">
+<head>
+	<meta charset="UTF-8">
+	<title>unpacking</title>
+	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
+	<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+	<!-- tooltip shit -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
+	<!--  end of tooltip shit -->
+</head>
 
-<h2>unpacking</h2>
-<div class="info"><b>release date: </b> 2 nov, 2021</div>
-<div class="info"><b>developer: </b> witch beam</div>
-<div class="info"><b>genre/type: </b> casual, puzzle, indie</div>
-			<div class="info"><b>links: </b> <a href="https://store.steampowered.com/app/1135690/Unpacking/" target="_blank">steam</a></div>
-<p>relaxing puzzle game that tell a story through it's levels! if you want something relaxing i really recommend this!
-<center><h4>screenshots</h4></center>
-<img src="unpacking1.jpg" width="100%">
-<img src="unpacking2.jpg" width="100%">
-	<img src="unpacking3.jpg" width="100%">
-</div>
-  
-<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
+<body>
+
+	<div id="iframepc">
+
+		<h2>unpacking</h2>
+		<div class="info"><b>release date: </b> 2 nov, 2021</div>
+		<div class="info"><b>developer: </b> witch beam</div>
+		<div class="info"><b>genre/type: </b> casual, puzzle, indie</div>
+		<div class="info"><b>links: </b> <a href="https://store.steampowered.com/app/1135690/Unpacking/" target="_blank">steam</a></div>
+		<p>relaxing puzzle game that tell a story through it's levels! if you want something relaxing i really recommend this!
+			<center>
+				<h4>screenshots</h4>
+			</center>
+			<img src="unpacking1.jpg" width="100%">
+			<img src="unpacking2.jpg" width="100%">
+			<img src="unpacking3.jpg" width="100%">
+	</div>
+
+	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
 </body>
+
 </html>
