--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -28,9 +28,14 @@
 
 	<main>
 		<div id="bar"> _ □ X</div>
-		<div id="address-bar">← → ↻ ⌂<span id="address">https://doqmeat.com/microblog</span></div>
+		<div id="address-bar">← → ↻ <a href="/">⌂</a><span id="address">https://doqmeat.com/microblog</span></div>
 
 		<div id="blog">
+
+			<article id="241211-5pm">
+				<p><b>11.dec.24 - 5pm</b> today was my last day of classes for this semester! the time passed by pretty quickly this time. i've been trying to revive my PS4 these days. will probably write a log about that soon. jesus christ.</p>
+			</article>
+
 			<article>
 				<p><b>04.dec.24 - 2am</b> i've been feeling so drained lately. i wonder if it's the mental illness<sup>tm</sup>. talking with new people and just overall interacting with others has felt more exhausting than ever before as of late. i wish i could interact with people as easily as others can. i've been feeling so strange lately. i really wonder why its so difficult for me to do such a simple thing.</p>
 			</article>
