homepage and rss updated

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -124,12 +124,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> kirby planet robobot</p>
+			<p><span class="hl">playing:</span> fallout new vegas, kirby planet robobot</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> dandadan</p>
+			<p><span class="hl">watching:</span> beastars (final season), dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> finishing this uni semester stress free</p>
-			<p class="date">last updated on 27.nov.24</p>
+			<p><span class="hl">working on:</span> HAVING FUN</p>
+			<p class="date">last updated on 17.dec.24</p>
 
 		</div>
 
