new silly cat, festive edition

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -128,9 +128,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> beastars (final season), dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> HAVING FUN</p>
-			<p class="date">last updated on 17.dec.24</p>
-
+			<p><span class="hl">working on:</span> adding more gaming logs</p>
+			<p class="date">last updated on 19.dec.24</p>
 		</div>
 
 		<div id="featured-page" class="box">
@@ -145,7 +144,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats" title="click to see more freaks"><img src="/collection/cats/!g/buenos-dias.jpg" alt="featured cat" width="68%"></a>
+			<a href="/collection/cats" title="click to see more freaks"><img src="/collection/cats/!g/jolly-cat.gif" alt="featured cat" width="80%"></a>
 		</div>
 
 
