fixed broken imgs

--- a/doqmeat/music/cds.html
+++ b/doqmeat/music/cds.html
@@ -154,13 +154,13 @@
 			</div>
 
 
-			<div class="cd"><img src="/shrines/siinamota/ikiru/cover-front.jpg">
+			<div class="cd"><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/jewel-case-frontcover.jpg">
 				<div class="hov">
 					<div class="caption">
 						<h3>生きる (ikiru) - siinamota</h3>
 						<p><span class="fav"></span></p>
-						<a class="i" href="/shrines/siinamota/ikiru/cd.jpg" target="_blank"><img src="/shrines/siinamota/ikiru/cd.jpg"></a>
-						<a class="i" href="/shrines/siinamota/ikiru/page-4.jpg" target="_blank"><img src="/shrines/siinamota/ikiru/page-4.jpg"></a>
+						<a class="i" href="https://siinamota.doqmeat.com/scans/!g/ikiru/cd.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/cd.jpg"></a>
+						<a class="i" href="https://siinamota.doqmeat.com/scans/!g/ikiru/p5.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/p5.jpg"></a>
 						<p><span class="ver"> regular</span></p>
 						<p><span class="date"> 22.feb.22</span></p>
 					</div>
@@ -172,8 +172,8 @@
 					<div class="caption">
 						<h3>夢のまにまに (yume no manimani) - siinamota</h3>
 						<p><span class="fav"></span></p>
-						<a class="i" href="/shrines/siinamota/yume-no-manimani/p10.jpg" target="_blank"><img src="/shrines/siinamota/yume-no-manimani/p10.jpg"></a>
-						<a class="i" href="/shrines/siinamota/yume-no-manimani/p3.jpg" target="_blank"><img src="/shrines/siinamota/yume-no-manimani/p3.jpg"></a>
+						<a class="i" href="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p5.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p5.jpg"></a>
+						<a class="i" href="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p10.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p10.jpg"></a>
 						<p><span class="ver"> 2019 reissue</span></p>
 						<p><span class="date"> 01.jun.22</span></p>
 					</div>
