--- a/doqmeat/music/fav-albums.html
+++ b/doqmeat/music/fav-albums.html
@@ -160,16 +160,16 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>生きる (ikiru) - siinamota</h2>
-					<p><img src="/shrines/siinamota/ikiru/cover-front.jpg" width="50%" class="r-img">the first siinamota album i bought physically (THANK YOU CDJAPAN!)</p>
+					<p><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/jewel-case-frontcover.jpg" width="50%" class="r-img">the first siinamota album i bought physically (THANK YOU CDJAPAN!)</p>
 					<p>i think this album was like my 2nd ever siinamota album i had listened to. when i used to be A LOT on t*ktok, i used to hear <i>young girl a</i> A LOT on it. like it was everywhere. and as embarrasing as it is... that was kinda how i found out about siinamota.</p>
 					<p>so, after listening to <b>sepia record</b> i went ahead and listened to this</p>
 					<p>and boy. what a contrast</p>
 					<p>this album is way more energetic than sepia record, i would even say it has a wider range of emotions. it has chaotic songs, songs that make me (personally) go up and down, slay af rock songs, and it even includes a nice down tempo song with a throwback to <i>strobe light</i> from <b>award strobe hello</b></p>
 					<p>and despite everything that i just said, it still manages to be cohesive</p>
 					<p>in this album siinamota put <a title="label webpage" href="https://www.umaa.net/what/ikiru.html" target="_blank">themes</a> to every song related to life. from "birth" all the way to "future" and "life". its very interesting how every song has a specific theme attached to it. i dont have much else to say about this atm but i just find it very cool.</p>
-					<p><img src="/shrines/siinamota/ikiru/cd.jpg" width="50%" align="left" style="margin-right:10px;rotate:20deg;">as i have mentioned at the beggining of this page, i own this album!!! i love looking at the booklet every once in a while since it features artwork from siinamota himself. i like his art style. i have uploaded my scans to <a href="https://archive.org/details/ikiru-scans" target="_blank">archive.org</a> if anyone wants to take a look. here are my fav pages from the booklet nonetheless</p>
-					<p><a title="open in a new tab" href="/shrines/siinamota/ikiru/page-3.jpg" target="_blank"><img src="/shrines/siinamota/ikiru/page-3.jpg" width="100%"></a></p>
-					<p><a title="open in a new tab" href="/shrines/siinamota/ikiru/page-4.jpg" target="_blank"><img src="/shrines/siinamota/ikiru/page-4.jpg" width="100%"></a></p>
+					<p><img src="!g/fav-albums/ikiru-cd.png" width="50%" align="left" style="margin-right:10px;rotate:20deg;">as i have mentioned at the beggining of this page, i own this album!!! i love looking at the booklet every once in a while since it features artwork from siinamota himself. i like his art style. i have uploaded my scans to <a href="https://archive.org/details/ikiru-scans" target="_blank">archive.org</a> if anyone wants to take a look. here are my fav pages from the booklet nonetheless</p>
+					<p><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/p3.jpg" width="100%"></p>
+					<p><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/p5.jpg" width="100%"></p>
 
 					<p>also what a pain is it to live in puerto rico when it comes to international shipping. i be setting up dates with the fedex driver every time i bought from CDJAPAN. but man was it so worth it for a siinamota album</p>
 
@@ -264,8 +264,8 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p><img src="https://siinamota.doqmeat.com/scans/!g/kokegane-no-uta/img4.jpg" width="100%" alt="full img of the kokegane no uta album cover"></p>
 					<p>and let me tell you: this might be my favorite album cover. its so colorful and pretty. and i think it encapsulates well the vibes of this EP. thanks to this album cover, i got to know more about momoc's other work as well, and i just love their art style so much!!! i'll make a page someday on my site showcasing my fav works from them.</p>
 					<p>here are some pages from the <a title="archive.org page" href="https://archive.org/details/kokegane-no-uta-scans" target="_blank">booklet</a> (scans provided to me! i hope to own the CD someday) with more illustrations by momoc</p>
-					<p><img src="/shrines/siinamota/kokagane-no-uta/img5.jpg" width="100%"></p>
-					<p><img src="/shrines/siinamota/kokagane-no-uta/img7.jpg" width="100%"></p>
+					<p><img src="https://siinamota.doqmeat.com/scans/!g/kokegane-no-uta/img5.jpg" width="100%"></p>
+					<p><img src="https://siinamota.doqmeat.com/scans/!g/kokegane-no-uta/img7.jpg" width="100%"></p>
 					<p>i really love this a lot</p>
 					<p><b>fav songs:</b> ましろの色 (mashiro no iro) <img src="/!g/pix/staryellow.gif"> 3年C組14番窪園チヨコの入閣 (year 3 class c-14, chiyoko kubozono's joining of the cabinet) <img src="/!g/pix/staryellow.gif"> うたをうたうひと (uta wo utau hito) <img src="/!g/pix/staryellow.gif">インマイヘッド (in my head)</p>
 					<p><b>links:</b> <a href="https://open.spotify.com/album/5Cp38bMkCtYSx3xEEEIN6B?si=SDogKXz2R_yXm14gsqFHmw" target="_blank">spotify</a> / <a href="https://youtube.com/playlist?list=OLAK5uy_lMJRDJtJjAx8DABdSfHCHnZzep9hDTxnw" target="_blank">youtube playlist</a></p>
@@ -556,10 +556,10 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p>i love how cohesive it is and the song order and everything just feels SO PERFECT!!!! the interludes are a super nice touch as well, <i>lost & found</i> being one of them while also being one of my favorite siinamota songs! you can read more about my love for this song <a href="/blog/2023/230912-vocaloid#lost" target="_blank">here!</a></p>
 					<p>also the <a title="archive.org scans" href="https://archive.org/details/yume-no-manimani-scans" target="_blank" class="outlink">booklet</a> of this album is so sweet. i love <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>'s art so much!!
 					<p>
-						<img src="/shrines/siinamota/yume-no-manimani/p10.jpg" width="100%">
-						<img src="/shrines/siinamota/yume-no-manimani/p3.jpg" width="100%">
-						<img src="/shrines/siinamota/yume-no-manimani/p4.jpg" width="100%">
-						<img src="/shrines/siinamota/yume-no-manimani/p9.jpg" width="100%">
+						<img src="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p10.jpg" width="100%">
+						<img src="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p3.jpg" width="100%">
+						<img src="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p5.jpg" width="100%">
+						<img src="https://siinamota.doqmeat.com/scans/!g/yume-no-manimani/p9.jpg" width="100%">
 					<p><b>fav songs:</b> lost & found <img src="/!g/pix/staryellow.gif"> strobe hello (a human works) <img src="/!g/pix/staryellow.gif"> yume no manimani <img src="/!g/pix/staryellow.gif"> that's a midday comet <img src="/!g/pix/staryellow.gif"> strobe last</p>
 					<p><b>links:</b> <a href="https://open.spotify.com/album/48amdpd58ZccXwqwyoIrHK?si=n3Ozb75pSl6zeU_ufQgD0g" target="_blank">spotify</a> / <a href="https://youtu.be/f3d6HNmb9ts?si=ETPIgYkkrIu89TAF" target="_blank">youtube</a> / <a title="currectly on stock as of writing this!" href="https://www.cdjapan.co.jp/product/UMA-1122" target="_blank">CDjapan</a></p>
 				</div>
