cooking up hardware page

--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -47,7 +47,7 @@
 		<h1>doqmeat's gaming log</h1>
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
 		<p>sharing my thoughts, progress, and screenshots of video games i've played!</p>
-		<p><b>subpages:</b> <a href="spreadsheet.html">spreadsheet</a> / <s>consoles</s></p>
+		<p><b>subpages:</b> <a href="spreadsheet.html">spreadsheet</a> / <a href="consoles.html">hardware</a></p>
 		<p>spoilers will be <span class="spoiler">hidden!</span></p>
 		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
@@ -66,12 +66,14 @@
 			<li>24.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a> + added <a href="neko-odyssey/index.html">neko odyssey</a></li>
 		</div>
 
-		<h2>links</h2>
-		<p>feel free to add me on...
-			<br>
-			<a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a> / <b>3DS (pretendo):</b> 5427-1045-8513 / <b>switch:</b> 3336-0516-7511
-		</p>
-		<p><b>do leave me a message as to who you are though!</b> i usually don't accept friend request unless i know where they came from.</p>
+		<h2>add me!</h2>
+		<ul>
+			<li><a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a></li>
+			<li><b>3DS (pretendo):</b> 5427-1045-8513</li>
+			<li><b>switch:</b> 3336-0516-7511</li>
+		</ul>
+
+		<p><b>leave me a message (via <a href="mailto:meow@doqmeat.com" target="_blank">e-mail</a> or whatever) as to who you are though!</b> i don't accept friend request unless i know where they came from.</p>
 
 
 		<h3>credit</h3>
